--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
     volumes:
       - ./backend:/app
     environment:
-      - PYTHONPATH=/app
+      - PYTHONPATH=/app/src
     depends_on:
-      - db
+      # - db
       - redis
 
   frontend:
@@ -29,17 +29,17 @@ services:
     depends_on:
       - backend
 
-  db:
-    image: postgres:15
-    container_name: postgres
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: mydb
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+  # db:
+  #   image: postgres:15
+  #   container_name: postgres
+  #   environment:
+  #     POSTGRES_USER: user
+  #     POSTGRES_PASSWORD: password
+  #     POSTGRES_DB: mydb
+  #   volumes:
+  #     - postgres_data:/var/lib/postgresql/data
+  #   ports:
+  #     - "5432:5432"
 
   redis:
     image: redis:7
@@ -47,5 +47,5 @@ services:
     ports:
       - "6379:6379"
 
-volumes:
-  postgres_data:
+# volumes:
+#   postgres_data:
