세션별 타이틀과 세부분석 분리 (llm 프롬프트용)

--- a/backend/src/env.example
+++ b/backend/src/env.example
@@ -23,6 +23,9 @@ GOOGLE_REDIRECT_URI=http://
 GOOGLE_SCOPE=SCOPE
 GOOGLE_AUTH_ENDPOINT=https://
 
+# OpenAI
+OPENAI_SECRET=OPENAI_SECRET_KEY
+
 
 # DB Setting
 DATABASE_URL=sqlite+aiosqlite:///./db.sqlite3
