--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,25 @@
 version: "3.9"
 
 services:
+
+  db:
+    image: postgres:15
+    container_name: postgres
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: mydb
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U user -d mydb"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
+
   backend:
     build:
       context: ./backend
@@ -12,9 +31,12 @@ services:
       - ./backend:/app
     environment:
       - PYTHONPATH=/app/src
+      - DATABASE_URL=postgresql+asyncpg://user:password@db:5432/mydb
     depends_on:
-      # - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
 
   frontend:
     build:
@@ -29,23 +51,11 @@ services:
     depends_on:
       - backend
 
-  # db:
-  #   image: postgres:15
-  #   container_name: postgres
-  #   environment:
-  #     POSTGRES_USER: user
-  #     POSTGRES_PASSWORD: password
-  #     POSTGRES_DB: mydb
-  #   volumes:
-  #     - postgres_data:/var/lib/postgresql/data
-  #   ports:
-  #     - "5432:5432"
-
   redis:
     image: redis:7
     container_name: redis
     ports:
       - "6379:6379"
 
-# volumes:
-#   postgres_data:
+volumes:
+  postgres_data:
