도커 서버 로그 볼륨 설정.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -28,6 +28,8 @@ services:
     environment:
       - PYTHONPATH=/app/src
       - DATABASE_URL=postgresql+asyncpg://user:password@db:5432/mydb
+    volumes:
+      ~/logs:/app/logs
     depends_on:
       db:
         condition: service_healthy
