--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,5 @@
-# .github/workflows/deploy.yml
 name: Deploy to Server
 
-# main 브랜치에 push될 때만 동작
 on:
   push:
     branches: [ "main" ]
@@ -11,14 +9,40 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 서버 SSH 접속 후 배포 실행
-      - name: Deploy to server via SSH
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Node 설치 (GitHub Actions 환경)
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 22
+
+      # 프론트 의존성 설치 & 빌드
+      - name: Build Frontend
+        run: |
+          cd frontend
+          npm ci --legacy-peer-deps
+          npm run build --mode production
+
+      # 빌드 결과 dist/ 서버로 복사
+      - name: Upload Frontend dist to server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          source: "frontend/dist/*"
+          target: "~/personal-running-coach-backend/frontend/dist"
+
+      # 백엔드 배포 (docker-compose)
+      - name: Deploy backend
         uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            cd ~/personal-running-coach-backend           # 서버 내 프로젝트 디렉토리
-            git pull origin main                # 최신 코드 가져오기
+            cd ~/personal-running-coach-backend
+            git pull origin main
             docker compose -f docker-compose.prod.yml up -d --build
