--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,8 @@ jobs:
           cd frontend
           npm ci --legacy-peer-deps
           npm run build
+        env:
+          VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
 
       # 빌드 결과 dist/ 서버로 복사
       - name: Upload Frontend dist to server
@@ -32,7 +34,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          source: "frontend/dist/*"
+          source: "frontend/dist/"
           target: "~/personal-running-coach/frontend/dist"
 
       # 백엔드 배포 (docker-compose)
