--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -29,6 +29,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://backend:8000/;
+        # rewrite ^/api/(.*)$ /$1 break;
+        proxy_pass http://backend:8000;
     }
 }
