non-www 로 url 통일

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -14,6 +14,7 @@ server {
     }
 }
 
+
 server {
     listen 443 ssl;
     server_name coach4runners.me;
@@ -26,10 +27,31 @@ server {
     location / {
         root /usr/share/nginx/html;
         index index.html;
+        try_files $uri /index.html;
     }
 
     location /api/ {
         # rewrite ^/api/(.*)$ /$1 break;
         proxy_pass http://backend:8000;
     }
+}
+
+
+# www redirect to non-www
+server {
+    listen 80;
+    server_name www.coach4runners.me;
+    return 301 https://coach4runners.me$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name www.coach4runners.me;
+
+    ssl_certificate /etc/letsencrypt/live/coach4runners.me/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/coach4runners.me/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    return 301 https://coach4runners.me$request_uri;
 }
