--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,8 +34,8 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          source: "frontend/dist/"
-          target: "~/personal-running-coach/frontend/dist"
+          source: "frontend/dist/*"
+          target: "~/personal-running-coach/frontend/dist/"
 
       # 백엔드 배포 (docker-compose)
       - name: Deploy backend
