--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,14 +27,26 @@ jobs:
         env:
           VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
 
-      # 빌드 결과 dist/ 서버로 복사
-      - name: Upload Frontend dist to server
-        uses: appleboy/scp-action@v0.1.7
+      # (권장) 서버의 이전 빌드 결과물 삭제
+      - name: Clean previous build on server
+        uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          source: "frontend/dist/*"
+          script: |
+            # target 디렉토리가 없으면 생성하고, 있으면 내용만 삭제합니다.
+            mkdir -p ~/personal-running-coach/frontend/dist/
+            rm -rf ~/personal-running-coach/frontend/dist/*
+
+      # 빌드 결과 dist/ 서버로 복사
+      - name: Upload Frontend dist to server
+        uses: appleboy/scp-action@v1
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          source: "frontend/dist/."
           target: "~/personal-running-coach/frontend/dist/"
 
       # 백엔드 배포 (docker-compose)
