--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,35 +27,24 @@ jobs:
         env:
           VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
 
-      # 서버의 이전 dist 디렉토리 "전체"를 삭제
-      - name: Clean old build directory on server
-        uses: appleboy/ssh-action@v1
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          script: |
-            # 이전 dist 폴더를 통째로 삭제합니다.
-            rm -rf ~/personal-running-coach/frontend/dist
+      # # 서버의 이전 dist 디렉토리 "전체"를 삭제
+      # - name: Clean old build directory on server
+      #   uses: appleboy/ssh-action@v1
+      #   with:
+      #     host: ${{ secrets.SERVER_HOST }}
+      #     username: ${{ secrets.SERVER_USER }}
+      #     key: ${{ secrets.SERVER_SSH_KEY }}
+      #     script: |
+      #       rm -rf ~/personal-running-coach/frontend/dist
 
-      # 빌드 결과 dist/ 디렉토리 전체를 서버로 복사
+      # 프론트 빌드파일 업로드
       - name: Upload Frontend dist to server
         uses: appleboy/scp-action@v1
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          source: "frontend/dist"
-          target: "~/personal-running-coach/frontend/"
-
-      # 빌드 결과 dist/ 서버로 복사
-      - name: Upload Frontend dist to server
-        uses: appleboy/scp-action@v1
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          source: "frontend/dist/."
+          source: "frontend/dist/*"
           target: "~/personal-running-coach/frontend/dist/"
 
       # 백엔드 배포 (docker-compose)
