--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,15 +27,15 @@ jobs:
         env:
           VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
 
-      # # 서버의 이전 dist 디렉토리 "전체"를 삭제
-      # - name: Clean old build directory on server
-      #   uses: appleboy/ssh-action@v1
-      #   with:
-      #     host: ${{ secrets.SERVER_HOST }}
-      #     username: ${{ secrets.SERVER_USER }}
-      #     key: ${{ secrets.SERVER_SSH_KEY }}
-      #     script: |
-      #       rm -rf ~/personal-running-coach/frontend/dist
+      # 서버의 이전 dist 디렉토리 "전체"를 삭제
+      - name: Clean old build directory on server
+        uses: appleboy/ssh-action@v1
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            rm -rf ~/personal-running-coach/frontend/dist
 
       # 프론트 빌드파일 업로드
       - name: Upload Frontend dist to server
