--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -52,8 +52,8 @@ services:
   redis:
     image: redis:7
     container_name: redis
-    ports:
-      - "6379:6379"
+    expose:
+      - "6379"
 
 volumes:
   postgres_data:
