백엔드 로컬개발환경 fakeredis 추가

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -29,6 +29,7 @@ services:
       - ./backend:/app
     environment:
       - PYTHONPATH=/app/src
+      - RUN_ENV=docker
       - DATABASE_URL=postgresql+asyncpg://user:password@db:5432/mydb
     depends_on:
       db:
